# LiteComp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/demo/: cases.cpp  cases.hpp  main.cpp  runner.cpp  runner.hpp  types.hpp
apps/regression/: main.cpp
apps/repl/: main.cpp
benchmarks/: cases.hpp  compiler.cpp  end_to_end.cpp  helpers.hpp  main.cpp  parser.cpp  scaling.cpp  vm.cpp
code/: Makefile  entrance-compiler
code/compiler/: CMakeLists.txt  ast.cpp  ast.hpp  ast.test.cpp  benchmark.cpp  builtins.cpp  builtins.hpp  compiler.cpp  compiler.hpp  compiler.test.cpp  entrance.cpp  lexer.hpp  lexer.test.cpp  object.cpp  object.hpp  parser.cpp  parser.hpp  parser.test.cpp  repl.cpp  repl.hpp  token.cpp  token.hpp  vm.cpp  vm.hpp  vm.test.cpp
code/test/compiler/: ast.test.cpp  benchmark.cpp  compiler.test.cpp  lexer.cpp  lexer.test.cpp  monkey.cpp  parser.cpp  parser.test.cpp  repl.cpp  token.test.cpp  vm.test.cpp
include/litecomp/: ast.hpp  builtins.hpp  bytecode.hpp  code.hpp  compiler.hpp  frame.hpp  lexer.hpp  object.hpp  parser.hpp  repl.hpp  symbol_table.hpp  token.hpp  vm.hpp
src/: ast.cpp  builtins.cpp  code.cpp  compiler.cpp  frame.cpp  lexer.cpp  object.cpp  parser.cpp  repl.cpp  symbol_table.cpp  token.cpp  vm.cpp
tests/: ast_test.cpp  builtins_test.cpp  bytecode_test.cpp  code_test.cpp  compiler_test.cpp  frame_test.cpp  lexer_test.cpp  negative_golden_test.cpp  object_test.cpp  parser_test.cpp  repl_test.cpp  symbol_table_test.cpp  test_helpers.hpp  token_test.cpp  vm_test.cpp
