cmake_minimum_required(VERSION 3.25)
project(Final)

set(CMAKE_CXX_STANDARD 17)

add_executable(ast ast.hpp ast.cpp)
add_executable(benchmark benchmark.cpp)
add_executable(builtins builtins.hpp builtins.cpp)
add_executable(code code.hpp code.cpp)
add_executable(compiler compiler.hpp compiler.cpp)
add_executable(frame frame.hpp frame.cpp)
add_executable(lexer lexer.hpp lexer.cpp)
add_executable(monkey entrance.cpp)
add_executable(object object.hpp object.cpp)
add_executable(parser parser.hpp parser.cpp)
add_executable(repl repl.hpp repl.cpp)
add_executable(symbol_table symbol_table.hpp symbol_table.cpp)
add_executable(token token.hpp token.cpp)
add_executable(vm vm.hpp vm.cpp)